<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">LeeDroid Tweaks</string>
    <string name="thread">Thread</string>
    <string name="dialog_color_picker">Colour Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="restart_title">Restart</string>
    <string name="rosie_restart">Restart HTC Sense to apply changes?</string>
    <string name="systemui_restart">Restart status bar to apply changes?</string>
    <string name="phone_restart">Quick reboot your phone to apply changes?</string>
    <string name="rosie_systemui_restart">Restart HTC Sense and status bar to apply changes?</string>
    <string name="need_rosie_restart">Restart of HTC Sense needed!</string>
    <string name="need_systemui_restart">Restart of status bar needed!</string>
    <string name="need_phone_restart">Quick reboot needed!</string>
    <string name="need_rosie_systemui_restart">Restart of HTC Sense and status bar needed!</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Donate over paypal</string>
    <string name="xda_profile">Profile</string>
    <string name="xda_profile_summary">Visit xda profile</string>
    <string name="m0narx">m0narX</string>
    <string name="m0narx_summary">Sensation LeeDroid Tweaks owner and developer</string>
    <string name="j4n87">j4n87</string>
    <string name="j4n87_summary">Original LeeDroid Tweaks creator and owner</string>
    <string name="richmondo">richmondo</string>
    <string name="richmondo_summary">Developer and teammate</string>
    <string name="about">About</string>
    <string name="systemui">Status bar</string>
    <string name="main">General</string>
    <string name="rosie">HTC Sense</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="misc">Misc</string>
    <string name="phone">Phone</string>
    <string name="advanced">Advanced</string>
    <string name="automatic_battery_enabled">Color will change based on current level</string>
    <string name="automatic_battery_disabled">Battery text has a static color</string>
    <string name="Mautomatic_battery_disabled">Battery Bar has a static color</string>
    <string name="automatic_signal_enabled">Color will change based on Signal Strength</string>
    <string name="automatic_signal_disabled">Signal Icon has a static color</string>
    <string name="automatic_wifi_enabled">Color will change based on current Wifi Signal Strength</string>
    <string name="automatic_wifi_disabled">Wifi Icon has a static color</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="menu_preferences_label">Preferences</string>
    <string name="menu_dialog_label">Dialog Picker</string>
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    <string name="different_tweaks">Different Tweaks</string>
    <string name="phone_info">Phone Info</string>
    <string name="phone_info_summary">Hidden HTC phone diagnostics screen</string>
    <string name="capacitive_backlight">Capacitive Backlight</string>
    <string name="capacitive_backlight_summary">Brightness of backlight behind bottom capacitive buttons</string>
    <string name="overscroll_glow_color">Overscroll Glow Color</string>
    <string name="overscroll_glow_color_summary">To set the color of the overscroll glow</string>
    <string name="volume_steps">Volume Steps</string>
    <string name="volume_steps_summary">Sets the volume steps</string>
    <string name="autobacklight_brightness">Autobacklight Brightness</string>
    <string name="autobacklight_brightness_summary">Sets the brightness strength of the autobacklight</string>
    <string name="mms_screen_on_summary">Turns the screen automatically on when message arrives</string>
    <string name="other">Other</string>
    <string name="appearance">Appearance</string>
    <string name="aosp_lockscreen">AOSP Lockscreen</string>
    <string name="aosp_lockscreen_summary">Activates the AOSP ICS Lockscreen</string>
    <string name="carrier_caption">Carrier Caption</string>
    <string name="carrier_caption_summary">The text to be displayed at top of the Lockscreen</string>
    <string name="volume_wake">Volume up/down wake</string>
    <string name="volume_wake_summary">Wake the device by pressing the volume buttons</string>
    <string name="menu_unlock">Unlock with Menu Button</string>
    <string name="menu_unlock_summary">If activated you can unlock Lockscreens by pressing the Menu Button</string>
    <string name="clock_options">Clock Options</string>
    <string name="clock_style">Clock Style</string>
    <string name="clock_style_summary">Choose to center or hide the clock</string>
    <string name="clock_color">Choose Clock Color</string>
    <string name="battery_options">Battery Options</string>
    <string name="battery_text_style">Battery Text Style</string>
    <string name="show_miui_battery_bar">Show MIUI Battery Bar</string>
    <string name="miui_battery_bar_height">MIUI Battery Bar Height</string>
    <string name="battery_text_color_settings">Battery Text Color Settings</string>
    <string name="miui_battery_bar_color_settings">MIUI Battery Bar Color Settings</string>
    <string name="automatically_color">Automatically Color</string>
    <string name="static_battery_color">Static Battery Color</string>
    <string name="auto_charging_color">[Auto] Charging Color</string>
    <string name="auto_regular_color">[Auto] Regular Color</string>
    <string name="auto_medium_level_color">[Auto] Medium Level Color</string>
    <string name="auto_low_level_color">[Auto] Low Level Color</string>
    <string name="auto_medium_level_color_summary">When battery is &lt; 40%</string>
    <string name="auto_low_level_color_summary">When battery is &lt; 15%</string>
    <string name="hide_notification_icons">Hide specific Notification Icons</string>
    <string name="hide_wifi_config">Show wifi config</string>
    <string name="hide_wifi_config_summary">Hides the wifi config to save some space on quicksettings</string>
    <string name="quick_quick_settings">Quick-quick settings</string>
    <string name="quick_quick_settings_summary">Automatically show quick settings when there are no notifications to clear</string>
    <string name="statusbar_tweaks">Statusbar Tweaks</string>
    <string name="quicksettings_tweaks">Quicksettings Tweaks</string>
    <string name="hide_n_reorder">Hide n Reorder</string>
    <string name="hide_n_reorder_summary">Hiding/Reordering quicksettings</string>
    <string name="notification_pulldown_tweaks">Notification Pulldown Tweaks</string>
    <string name="notificationbar_caption">Notificationbar Caption</string>
    <string name="notificationbar_caption_summary">The text to be displayed at top of the Notificationbar</string>
    <string name="statusbar_transparency">Statusbar visibility</string>
    <string name="homescreen">Homescreen</string>
    <string name="smooth_rosie_tweaks">Smooth Rosie Tweaks</string>
    <string name="enable_unlock_animation">Skip unlock animation</string>
    <string name="hide_navbar_labels">Hide All apps label</string>
    <string name="hide_navbar_labels_summary">Hides the All apps label on the navigation bar</string>
    <string name="transp_navbar">Transparent navigationbar</string>
    <string name="transp_navbar_summary">Makes the navigationbar transparent</string>
    <string name="app_drawer">App Drawer</string>
    <string name="appdrawer_columns">App drawer columns</string>
    <string name="appdrawer_columns_summary">Change number of columns in app drawer</string>
    <string name="paginated_app_drawer">Paginated app drawer</string>
    <string name="paginated_app_drawer_summary">Use pages when scrolling?</string>
    <string name="hide_date">Hide date</string>
    <string name="hide_date_summary">Hide date from notification area</string>
    <string name="hide_arrows">Hide arrows</string>
    <string name="hide_arrows_summary">Hide arrows from keyboard</string>
    <string name="keyboard">Keyboard and buttons</string>
    <string name="notif_bgcolor">Background color</string>
    <string name="notif_bgcolor_summary">Change notification area background</string>
    <string name="rosie_bgcolor">Background color</string>
    <string name="rosie_bgcolor_summary">Change app drawer background</string>
    <string name="apm_items">Power menu items</string>
    <string name="apm_items_summary">Change items in power menu</string>
    <string name="recentapps_dialog_tweaks">Recent apps dialog</string>
    <string name="recentapps_style">Recent apps dialog style</string>
    <string name="recentapps_style_summary">Change look of recent apps dialog</string>
    <string name="recentapps_bgcolor">Background colour</string>
    <string name="recentapps_bgcolor_summary">Change background colour of dialog</string>
    <string name="h_icon_replace">High speed mobile data icon</string>
    <string name="h_icon_replace_summary">Replace standart H icon with other</string>
    <string name="clock_hide_ampm_summary">Hides AM and PM on 12-h clock</string>
    <string name="clock_hide_ampm">Hide AM/PM</string>
    <string name="recentapps_hideicons">Hide app icons</string>
    <string name="recentapps_hideicons_summary">Hides app icons in recent apps dialog</string>
    <string name="recentapps_custombg">Use background image</string>
    <string name="recentapps_custombg_summary">Set any image as recent apps dialog background</string>
    <string name="statusbar_custombg">Use background image</string>
    <string name="statusbar_custombg_summary">Set any image as pulldown notification background</string>
    <string name="rosie_custombg">Use background image</string>
    <string name="rosie_custombg_summary">Set any image as app drawer background</string>
    <string name="lockscreen_hide_datetime">Hide date/time</string>
    <string name="lockscreen_hide_datetime_summary">Hides date,time or am/pm</string>
    <string name="lockscreen_shortcuts">Customize shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Hide bubbles or labels</string>
    <string name="lockscreen_hide_opname">Hide carrier label</string>
    <string name="lockscreen_hide_opname_summary">Hides carrier label from lockscreen</string>
    <string name="rosie_hideapps">Hide app icons</string>
    <string name="rosie_hideapps_summary">Hide specific app icons from app drawer</string>
    <string name="lockscreen_hide_navbar_summary">Hide navbar behind lock ring</string>
    <string name="lockscreen_hide_navbar">Hide navbar</string>
    <string name="use_media_summary">When screen off, long press</string>
    <string name="use_media">Volume keys music control</string>
    <string name="extended_statusbartext">Carrier second label</string>
    <string name="extended_statusbartext_summary">Information string below carrier label</string>
    <string name="extended_statusbartext_color">Color of second line</string>
    <string name="extended_statusbartext_color_summary">Color of string below carrier label</string>
    <string name="statusbarcaption_options">Carrier label</string>
    <string name="statusbarcaption_options_summary">Custom label, 1 or 2 lines and etc.</string>
    <string name="extended_statusbartext_showicon">Show icon</string>
    <string name="extended_statusbartext_showicon_summary">Show icon in second line</string>
    <string name="cm_brightness_control">CM brightness control</string>
    <string name="cm_brightness_control_summary">Slide left-right to change brightness</string>
</resources>