<?xml version="1.0" encoding="utf-8"?>
<com.htc.preference.HtcPreferenceScreen android:title="accessibility_settings_title" android:key="systemui_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <com.htc.preference.HtcPreferenceCategory android:title="@string/quicksettings_tweaks" />
    <com.htc.preference.HtcPreference android:title="@string/hide_n_reorder" android:key="hrquick_pref" android:summary="@string/hide_n_reorder_summary">
        <intent android:targetPackage="com.m0narx.tweaks" android:action="android.intent.action.MAIN" android:targetClass="com.m0narx.tweaks.DeleteAndRearrangeQS" />
    </com.htc.preference.HtcPreference>
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/quick_quick_settings" android:key="super_quick_settings" android:summary="@string/quick_quick_settings_summary" />
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/hide_wifi_config" android:key="wifi_config" android:summary="@string/hide_wifi_config_summary" />
    <com.htc.preference.HtcPreferenceCategory android:title="@string/statusbar_tweaks" />
    <com.htc.preference.HtcPreference android:title="@string/hide_notification_icons" android:key="hide_noti" />
    <com.htc.preference.HtcPreference android:title="@string/battery_options" android:key="battery_options_pref">
        <intent android:targetPackage="com.m0narx.tweaks" android:action="android.intent.action.MAIN" android:targetClass="com.m0narx.tweaks.battery_settings" />
    </com.htc.preference.HtcPreference>
    <com.htc.preference.HtcPreference android:title="@string/clock_options" android:key="clock_options_pref">
        <intent android:targetPackage="com.m0narx.tweaks" android:action="android.intent.action.MAIN" android:targetClass="com.m0narx.tweaks.clock_settings" />
    </com.htc.preference.HtcPreference>
    <com.htc.preference.HtcListPreference android:entries="@array/h_icon_replace_entries" android:title="@string/h_icon_replace" android:key="h_icon_replace" android:summary="@string/h_icon_replace_summary" android:defaultValue="0" android:entryValues="@array/h_icon_replace_values" />
    <com.htc.preference.HtcSeekBarPreference android:max="254" android:title="@string/statusbar_transparency" android:key="pref_statusbar_transparency" android:defaultValue="254" />
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/cm_brightness_control" android:key="cm_brightness_control" android:summary="@string/cm_brightness_control_summary" />
    <com.htc.preference.HtcPreferenceCategory android:title="@string/notification_pulldown_tweaks" />
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/hide_date" android:key="hide_date" android:summary="@string/hide_date_summary" />
    <com.htc.preference.HtcPreference android:title="@string/statusbarcaption_options" android:key="statusbarcaption_options" android:summary="@string/statusbarcaption_options_summary">
        <intent android:targetPackage="com.m0narx.tweaks" android:action="android.intent.action.MAIN" android:targetClass="com.m0narx.tweaks.StatusBarCaption" />
    </com.htc.preference.HtcPreference>
    <com.m0narx.tweaks.colorpicker.ColorPickerPreference android:title="@string/notif_bgcolor" android:key="statusbar_bgcolor_pref" android:summary="@string/notif_bgcolor_summary" android:defaultValue="@integer/default_sysui_color" />
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/statusbar_custombg" android:key="statusbar_custombg" android:summary="@string/statusbar_custombg_summary" />
    <com.htc.preference.HtcPreferenceCategory android:title="@string/recentapps_dialog_tweaks" />
    <com.htc.preference.HtcListPreference android:entries="@array/recentapps_style_entries" android:title="@string/recentapps_style" android:key="recentapps_style" android:summary="@string/recentapps_style_summary" android:defaultValue="0" android:entryValues="@array/recentapps_style_values" />
    <com.m0narx.tweaks.colorpicker.ColorPickerPreference android:title="@string/recentapps_bgcolor" android:key="recentapps_bgcolor" android:summary="@string/recentapps_bgcolor_summary" android:defaultValue="@integer/default_recentapps_color" />
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/recentapps_custombg" android:key="recentapps_custombg" android:summary="@string/recentapps_custombg_summary" />
    <com.htc.preference.HtcCheckBoxPreference android:title="@string/recentapps_hideicons" android:key="recentapps_hideicons" android:summary="@string/recentapps_hideicons_summary" />
</com.htc.preference.HtcPreferenceScreen>